--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngrx/effects": "^13.0.1",
     "@ngrx/store": "^13.0.1",
     "@ngrx/store-devtools": "^13.0.1",
+    "ngx-markdown": "^13.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
